new 2nd group of words

--- a/docs/process_words.ipynb
+++ b/docs/process_words.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 2,
    "id": "58696ea4-70ca-441d-a240-6a281fadbd29",
    "metadata": {},
    "outputs": [],
@@ -25,39 +25,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 3,
    "id": "a182a8e0-d415-4cb5-8811-48e8a35532d5",
    "metadata": {},
    "outputs": [],
    "source": [
     "words = out.decode().split('\\n')\n",
-    "valid_words = [word for word in words if len(word)==5]"
+    "valid_words = [word for word in words if len(word)==6]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 4,
    "id": "acaad982-a13e-432f-aa5f-faef32230ad3",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0        ababa\n",
-       "1        abaca\n",
-       "2        abaco\n",
-       "3        abada\n",
-       "4        abadi\n",
-       "         ...  \n",
-       "10831    ñurda\n",
-       "10832    ñurdo\n",
-       "10833    ñutas\n",
-       "10834    ñutos\n",
-       "10835    ñuzco\n",
-       "Length: 10836, dtype: object"
+       "0        ababas\n",
+       "1        ababol\n",
+       "2        abacal\n",
+       "3        abacas\n",
+       "4        abacha\n",
+       "          ...  \n",
+       "25404    ñudosa\n",
+       "25405    ñudoso\n",
+       "25406    ñurdas\n",
+       "25407    ñurdos\n",
+       "25408    ñuzcos\n",
+       "Length: 25409, dtype: object"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -69,13 +69,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 5,
    "id": "4544278d-a0e3-4e79-a016-d2497952c343",
    "metadata": {},
    "outputs": [],
    "source": [
     "formatted = \"  \" + \"'\" + words + \"'\" + \",\"\n",
-    "formatted.to_csv('palabras_valid.txt', sep='\\n', index=False, header=None)"
+    "formatted.to_csv('palabras_valid_6.txt', sep='\\n', index=False, header=None)"
    ]
   },
   {
@@ -89,7 +89,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3.9.5 ('base')",
    "language": "python",
    "name": "python3"
   },
@@ -104,6 +104,11 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.9.5"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "1de8134da1f147f8e0db91e5aca1f7f5fbc588d9ee96b6ab24a7ca3633b6d5a5"
+   }
   }
  },
  "nbformat": 4,
